<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startingactivity"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/back"
        android:layout_width="340dp"

        android:layout_height="480dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#1751FF"
            android:textSize="50dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="7dp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:backgroundTint="#474749"
        app:cardCornerRadius="8dp"
        app:constraintSet="@id/back"

        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back"
        app:layout_constraintVertical_bias="0.694"
        tools:ignore="MissingConstraints">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="38dp"

     android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/are_you_a_new_user"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/go_signup"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
android:layout_gravity="center"


        android:background="@drawable/btn"
        android:backgroundTint="#3A6EAD"
        android:elevation="2dp"
        android:onClick="goto_signup"
        android:outlineAmbientShadowColor="@android:color/white"
        android:text="@string/button_signin"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/go_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/go_login"
        tools:layout_editor_absoluteY="136dp" />
    <TextView
        android:layout_width="175dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/go_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_signup" />

    <Button
        android:id="@+id/go_login"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/go_signup"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn"
        android:backgroundTint="#3A6EAD"
        android:layout_gravity="center"
        android:elevation="2dp"
        android:onClick="goto_login"
       android:outlineAmbientShadowColor="@android:color/white"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"

         />
</LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>