<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile_freagment"
    android:background="?android:colorBackground">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="227dp"
            android:background="#5EB1D8"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="154dp"
                android:layout_height="154dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="75dp">

                <ImageView
                    android:id="@+id/pro_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"

                    android:background="@drawable/ic_person_black_24dp"></ImageView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/edit_propic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:drawableRight="@drawable/ic_edit_black_24dp"
                android:text="Edit profile picture"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>
        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="6dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="Name"/>

        <Button
            android:id="@+id/edit_pro"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"></Button>

        <Button
            android:id="@+id/update_pro"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:drawableRight="@drawable/ic_update_black_24dp"
            android:text="Verefy profile   "
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1">

        </Button>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="870dp"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:elevation="2dp">

                <TableLayout
                    android:id="@+id/linearLayout"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:id="@+id/about"
                        android:drawableLeft="@drawable/ic_info_black_24dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_margin="5dp"/>
                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="6dp">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/email"
                            android:layout_margin="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_email"
                            android:text=" name"
                            android:layout_margin="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/phone"
                            android:layout_margin="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/profile_phone"
                            android:layout_margin="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"

                            android:text="p..."
                            />
                    </TableRow>


                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/profile_adress"
                            android:layout_margin="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_address"
                            android:text="Applied"

                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:layout_margin="5dp"


                            />

                    </TableRow>
                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/time_stamp"
                            android:layout_margin="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/reg_time"
                            android:text="Applied"

                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:layout_margin="5dp"


                            />

                    </TableRow>






                </TableLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.cardview.widget.CardView>